# GPU-Philox

./: CMakeLists.txt  README.md  main.py  philox.cu  philox.cuh  philox_data.npy
